--- a/app.json
+++ b/app.json
@@ -1,8 +1,9 @@
 {
   "pages": [
     "page/weather/index",
-    "page/scan-code/index",
-    "page/calendar/index"
+    "page/navigate/index",
+    "page/calendar/index",
+    "page/scan-code/index"
   ],
   "window": {
     "navigationBarTextStyle": "black",
@@ -15,23 +16,26 @@
     "selectedColor": "#3cc51f",
     "borderStyle": "black",
     "backgroundColor": "#ffffff",
-    "list": [{
-      "pagePath": "page/weather/index",
-      "iconPath": "image/bar_a1.png",
-      "selectedIconPath": "image/bar_a2.png",
-      "text": "天气"
-    },
-    {
-      "pagePath": "page/calendar/index",
-      "iconPath": "image/bar_c1.png",
-      "selectedIconPath": "image/bar_c2.png",
-      "text": "日历"
-    }, {
-      "pagePath": "page/scan-code/index",
-      "iconPath": "image/bar_b1.png",
-      "selectedIconPath": "image/bar_b2.png",
-      "text": "扫码"
-    }]
+    "list": [
+      {
+        "pagePath": "page/weather/index",
+        "iconPath": "image/bar_a1.png",
+        "selectedIconPath": "image/bar_a2.png",
+        "text": "天气"
+      },
+      {
+        "pagePath": "page/calendar/index",
+        "iconPath": "image/bar_c1.png",
+        "selectedIconPath": "image/bar_c2.png",
+        "text": "日历"
+      },
+      {
+        "pagePath": "page/navigate/index",
+        "iconPath": "image/icon_component.png",
+        "selectedIconPath": "image/icon_component_HL.png",
+        "text": "小工具"
+      }
+    ]
   },
   "networkTimeout": {
     "request": 10000,
