增加七牛云图片上传

--- a/app.json
+++ b/app.json
@@ -5,7 +5,10 @@
     "page/calendar/index",
     "page/scan-code/index",
     "page/ocr/index",
+    "page/qiniu/index",
     "page/demo/demo"
+
+
   ],
   "window": {
     "navigationBarTextStyle": "black",
